content/demo.css
@media screen and (min-width: 300px) {
  .bricklayer-column-sizer {
    /* If page is greater than 300px, columns will be 20% wide. */
    width: 100%;
  }
}

@media screen and (min-width: 400px) {
  .bricklayer-column-sizer {
    /* If page is greater than 400px, columns will be 10% wide, which are more narrow. */
    width: 100%;
  }
}

@media screen and (min-width: 700px) {
  .bricklayer-column-sizer {
    /* If page is greater than 700px, columns will be 5% wide. That means there will be lots of columns */
    width: 50%;
  }
}

.bricklayer {
  margin: 10px 5px;
}

.box {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  color: rgba(255, 255, 255, .6);
  margin-bottom: 10px;
  -webkit-animation-duration: .3s;
  animation-duration: .3s;
  min-height: 150px;
}

.is-append {
  -webkit-animation-name: animAppend, animFade;
  animation-name: animAppend, animFade;
}

.is-prepend {
  -webkit-animation-name: animPrepend, animFade;
  animation-name: animPrepend, animFade;
}

@-webkit-keyframes animAppend {
  from {
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
  }
  to {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@keyframes animAppend {
  from {
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
  }
  to {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@-webkit-keyframes animPrepend {
  from {
    -webkit-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  to {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@keyframes animPrepend {
  from {
    -webkit-transform: translateY(-20px);
    transform: translateY(-20px);
  }
  to {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@-webkit-keyframes animFade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes animFade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

